--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ workflows:
     jobs:
       - run_tests
       - gke_create_cluster
-      - gke_deploy_app:
+      - gke_deploy_pravega:
           requires:
             - run_tests
             - gke_create_cluster
