Changed mocha command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,11 @@ jobs:
       - run:
           name: Install npm dependencies
           command: |
-            npm install -g mocha --save
+            npm install --save
       - run:
           name: Run Unit Tests
           command: |
-            ./node_modules/.bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+            cd ./node_modules/.bin && mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
       - store_test_results:
           path: test-results
   gke_create_cluster:
