--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Create GKE Cluster
           command: |
-            echo $TF_CLOUD_TOKEN | base64 -d > $HOME/.terraformrc
+            echo $TF_CLOUD_TOKEN > $HOME/.terraformrc
             echo $GOOGLE_CLOUD_KEYS > $HOME/gcloud_keys.json
             gcloud auth activate-service-account --key-file ${HOME}/gcloud_keys.json
             cd gke_cluster
